force-app/main/default/objects/ODX_Case__c/ODX_Case__c.object-meta.xml
<CustomObject>
    <label>ODX Case</label>
    <nameField>
        <label>Case Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ODX Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>