force-app/main/default/objects/ODX_Case__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ODX Cases</relationshipLabel>
    <relationshipName>ODX_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>