force-app/main/default/objects/ODX_Case__c/fields/Counsel__c.field-meta.xml
<CustomField>
    <fullName>Counsel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counsel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ODX Cases (Counsel)</relationshipLabel>
    <relationshipName>ODX_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>