force-app/main/default/objects/ODX_Case__c/fields/filed_on__c.field-meta.xml
<CustomField>
    <fullName>filed_on__c</fullName>
    <label>Filed On</label>
    <required>true</required>
    <type>Date</type>
</CustomField>