force-app/main/default/objects/ODX_Case__c/fields/Judge__c.field-meta.xml
<CustomField>
    <fullName>Judge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judge</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ODX Cases (Judge)</relationshipLabel>
    <relationshipName>ODX_Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>