force-app/main/default/objects/ODX_Case__c/fields/Outstanding_Fees__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Fees__c</fullName>
    <label>Outstanding Fees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>