force-app/main/default/objects/ODX_Case__c/fields/Sentencing_Date__c.field-meta.xml
<CustomField>
    <fullName>Sentencing_Date__c</fullName>
    <label>Sentencing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>